--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         text-align: right;
         padding-top: 11em;
-        background-color: blue;
+        background-color: red;
 
       }
       .textColumn p {
@@ -75,7 +75,7 @@
   <body>
     <div class="textColumn">
       <h1>Congratulations</h1>
-      <p>Your first AWS Elastic Beanstalk Node.js application is now running Enjoy this moment... . YO YO environment in the AWS Cloud</p>
+      <p>Your first AWS Elastic Beanstalk Node.js application is now running Enjoy ....this moment... . YO YO environment in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
       <h2>What's Next?</h2>
