--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <body>
     <div class="textColumn">
       <h1>Congratulations</h1>
-      <p>Your new branch in the AWS Cloud</p>
+      <p>Your new branch 1 in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
       <h2>What's Next?</h2>
